# linear-regression

./: Readme.md  pyproject.toml  regression.ipynb
